--- a/SteamCrawler.Logic/SteamCrawler.Logic.csproj
+++ b/SteamCrawler.Logic/SteamCrawler.Logic.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exception\AlreadyAddedToSetException.cs" />
     <Compile Include="ISteamRetriver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecialsRetriver.cs" />
